# cobald-hep-plugins

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: unittests.yml  verification.yml
cobald_hep_plugins/: __init__.py  example.py  stopper.py
docs/: conf.py  index.rst
docs/plugins/: example.rst  stopper.rst
tests/: test_example.py  test_stopper.py  utility.py
