[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version", "description"]
name = "cobald-hep-plugins"
maintainers = [
    {name = "Max Fischer", email = "maxfischer2781@gmail.com"},
    {name = "MatterMiners", email = "matterminers@lists.kit.edu"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
license = {"file" = "LICENSE"}
keywords = ["cobald", "tardis", "High Energy Physics"]
requires-python = "~=3.6"
dependencies = [
    "cobald~=0.12",
    "cobald-tardis",
    "typing_extensions; python_version<'3.8'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "flake8-bugbear",
    "black; implementation_name=='cpython'",
    "coverage",
    "pytest-cov",
    "flake8-2020",
    "mypy; implementation_name=='cpython'",
]
doc = ["sphinx"]

[project.urls]
Documentation = "https://cobald-hep-plugins.readthedocs.io/"
Source = "https://github.com/MatterMiners/cobald-hep-plugins"

# YAML Tag Plugins for use in cobald YAML configurations
[project.entry-points."cobald.config.yaml_constructors"]
# v name used in YAML v    v --- package/module --- v v class/function
CobaldHepProjectExample = "cobald_hep_plugins.example:DemandScale"
Stopper = "cobald_hep_plugins.stopper:Stopper"

[tool.flit.module]
name = "cobald_hep_plugins"
